# text2fashion-sdxl

./: .env.example  .gitignore  BATCH_1_CONTENTS.md  BATCH_2_CONTENTS.md  BATCH_3_CONTENTS.md  README.md  pyproject.toml  requirements.txt
app/: app.py  requirements.txt
app/examples/: prompts.json
configs/: data_all.yaml  data_all_kaggle.yaml  eval.yaml  eval_kaggle.yaml  hub.example.yaml  inference.yaml  resume_all_kaggle.yaml  train_all_kaggle.yaml
notebooks/: 01_train_eval_kaggle.ipynb
reports/: selected_checkpoint.json  v0_outerwear_400_steps.md  v1_all_categories_training.md  visual_evaluation_template.csv
scripts/: evaluate_checkpoints.py  export_best_lora.py  prepare_all_data.py  resume_all_lora.py  train_all_lora.py
src/text2fashion/: __init__.py  settings.py
src/text2fashion/data/: __init__.py  caption_cleaning.py  export_train_folder.py  load_data.py  split_dataset.py  validate_dataset.py
src/text2fashion/evaluation/: build_grids.py  generate_samples.py  prompts.py  score_report.py  visual_score_template.py
src/text2fashion/hub/: hub_config.py  model_card.py  push_to_hub.py
src/text2fashion/inference/: generate.py  pipeline.py
src/text2fashion/training/: checkpoint_utils.py  resume_utils.py  train_command.py
